# pydantic_cache

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-autoapprove.yaml  dependabot-automerge.yml  linting.yaml  semantic-release.yaml  testing-reusable.yaml  testing.yaml
src/auto_pydantic_cache/: __init__.py
src/pydantic_cache/: __init__.py
tests/: test_unit.py
